--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
 		"flow-bin": "^0.64.0",
 		"husky": "^0.14.3",
 		"lint-staged": "^6.1.0",
-		"polished": "^1.9.0",
 		"prettier": "^1.10.2",
-		"prettier-eslint": "^8.8.1",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-fela": "^6.2.4",
@@ -42,5 +40,6 @@
 			"prettier --single-quote --write",
 			"git add"
 		]
-	}
+	},
+	"devDependencies": {}
 }
